# SilverlightEngine

./: CMakeLists.txt  README.md  Setup_Windows.bat
Sandbox/: CMakeLists.txt
Sandbox/Source/: main.cpp
SilverlightEngine/: CMakeLists.txt
SilverlightEngine/Source/Foundation/Paths/: PathManager.cpp  PathManager.h
SilverlightEngine/Source/Foundation/ResourceManager/: ResourceManager.cpp
SilverlightEngine/Source/Foundation/ResourceManager/File/: FileManager.cpp
SilverlightEngine/Source/Graphics/: Camera.cpp  DataStructs.h  GLMConfig.h  Material.h  Vertex.h
SilverlightEngine/Source/Graphics/Components/Light/: LightData.h
SilverlightEngine/Source/Graphics/Components/Mesh/: CustomMeshComponent.cpp  MeshComponent.h
SilverlightEngine/Source/Graphics/Components/Transform/: TransformComponent.cpp  TransformComponent.h
SilverlightEngine/Source/Graphics/Systems/: ModelLoadingSystem.cpp
SilverlightEngine/Source/Graphics/Vulkan/: VulkanDescriptorPool.cpp  VulkanInstance.cpp  VulkanRenderer.cpp
SilverlightEngine/Source/Graphics/Vulkan/Pipeline/: VulkanGraphicsPipeline.cpp  VulkanShadowPipeline.cpp
SilverlightEngine/Source/Graphics/Vulkan/SceneData/: VulkanSceneShadow.cpp  VulkanSceneShadow.h
Tools/: CompileShaders_Windows.bat
